# piombo-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: piombo.db  test_narrator_full.py  test_scene_runner_llm.py
backend/app/: main.py
backend/app/ai/: admin_ingest.py  beat_narrator.py  context_builder.py  intent_router.py  llm_client.py  output_parser.py
backend/app/ai/agents/: consistency.py  narrator.py  semantic_checker.py
backend/app/ai/graph/: kcore.py  lore_graph.py  pagerank.py
backend/app/ai/prompts/: narrator.py
backend/app/ai/retrieval/: hybrid.py  triplet.py  (+1 more)
backend/app/api/: admin.py  character.py  game.py  session.py
backend/app/core/: config.py  database.py  dependencies.py
backend/app/game/: __init__.py  models.py  scene_loader.py  scene_runner.py  test_scene_runner.py  test_scene_runner_llm.py
backend/app/models/: __init__.py  base.py  character.py  game_event.py  quest.py  session.py
backend/app/schemas/: character.py  game.py  session.py
backend/app/services/: game_service.py
backend/docs/results/: mistral-nemo_12b-instruct-2407-q4_K_M.json  qwen3_8b.json
backend/migrations/: env.py
backend/migrations/versions/: 21a03f9c4f18_init_base_tables.py  e8be8ce27422_init_create_base_tables.py
backend/seed_lore/: SCENE_REFERENCE.md  characters.json  events.json  factions.json  flags.json  locations.json  objects.json  relations.json
backend/seed_lore/scenes/: scene_01.json  scene_02.json  scene_03.json
docker/: docker-compose.yml
docs/: benchmark_runner.py  benchmarks.md
docs/adr/: ADR-004-llm-model-selection.md
